--- a/app/src/main/res/layout/activity_custom_pin.xml
+++ b/app/src/main/res/layout/activity_custom_pin.xml
@@ -2,31 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     tools:context=".CustomPinActivity"
     android:orientation="vertical"
     android:gravity="top|center">
 
     <TextView
         android:textSize="20sp"
-        android:text="You must set PIN to decrypt string"
         android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="@string/you_must_set_pin_to_decrypt_string"/>
 
     <com.goodiebag.pinview.Pinview
         android:id="@+id/pin_view"
         android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:pinLength="4"
+        app:password="true"
         app:pinWidth="50dp"
         app:pinHeight="50dp"
-        app:pinLength="4"
-        app:cursorVisible="false"
-        app:forceKeyboard="false"
         app:inputType="number"
-        app:password="true"/>
+        app:cursorVisible="false"
+        app:forceKeyboard="false"/>
 
 
 </LinearLayout>
