--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -35,30 +35,24 @@
         android:id="@+id/btn_get_last_saved_keystore"
         app:layout_constraintTop_toBottomOf="@id/btn_save_string_keystore"/>
 
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="25dp"
+        android:id="@+id/iv_fingerprint"
+        android:src="@drawable/ic_fingerprint"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iv_pin"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageView
-            android:id="@+id/iv_fingerprint"
-            android:visibility="gone"
-            android:layout_margin="25dp"
-            android:src="@drawable/ic_fingerprint"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-        <ImageView
-            android:id="@+id/iv_pin"
-            android:visibility="gone"
-            android:layout_margin="25dp"
-            android:src="@drawable/ic_pin"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-
-    </LinearLayout>
-
+    <ImageView
+        android:id="@+id/iv_pin"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="25dp"
+        android:src="@drawable/ic_pin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_fingerprint"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
