--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@id/btn_save_string_keystore"/>
 
     <ImageView
+        android:visibility="gone"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="25dp"
@@ -46,6 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_pin"
         android:layout_width="50dp"
         android:layout_height="50dp"
